--- a/React-Native/Money-Tracker/Mobile-App/money_tracker/package.json
+++ b/React-Native/Money-Tracker/Mobile-App/money_tracker/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.8",
+    "expo-crypto": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
