--- a/React-Native/Money-Tracker/Mobile-App/money_tracker/package.json
+++ b/React-Native/Money-Tracker/Mobile-App/money_tracker/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "crypto-js": "^4.2.0",
